# pgmq

./: INSTALLATION.md
.github/workflows/: crate_ci.yml  extension_upgrade.yml
main/: 404.html  index.html
main/api/sql/functions/: index.html
main/api/sql/types/: index.html
main/fifo-queues/: index.html
main/partitioned-queues/: index.html
main/search/: search_index.json
main/topics/: index.html
pgmq-extension/: Makefile  pgmq.control
pgmq-extension/client-tests/: upgrade_test.py
pgmq-extension/sql/: pgmq--1.11.0--1.11.1.sql
pgmq-rs/: Cargo.toml  Makefile  README.md
pgmq-rs/examples/: install.rs
pgmq-rs/src/: lib.rs  types.rs  util.rs
pgmq-rs/src/install/: applied.rs  init_migrations_table.md  installed_version.md  mod.rs  script.rs  version.rs
pgmq-rs/src/install/embedded/: install_sql_embedded.md  mod.rs  pgmq.control  sql
pgmq-rs/src/install/embedded/snapshots/: pgmq__install__embedded__tests__migrations_script__get_scripts.snap  pgmq__install__embedded__tests__migrations_script__get_scripts_from_dir.snap  pgmq__install__embedded__tests__migrations_script__get_scripts_from_dir_not_found.snap
pgmq-rs/src/install/github/: install_sql_github.md  mod.rs
pgmq-rs/src/pg_ext/: mod.rs  visibility_timeout_offest.rs
pgmq-rs/src/snapshots/: pgmq__types__tests__serialize_message_body.snap
pgmq-rs/tests/: integration_test.rs  pg_ext_integration_test.rs  test_sql.rs
